# R1_SDK

./: README.md
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/lib/: libOsqpEigen.so.0.8.1  libnlopt_cxx.so.0.7.0  libpinocchio.so.2.5.1
install/lib/HDAS/: check_node  mcu_ota  ota_test
install/lib/mobiman/: chassis_control_node  cmd_relay.py  eepose_pub_node  joy_cmd_chassis.py  r1_control_manager  r1_eepose_pub_node
install/lib/ocs2_mobile_manipulator_ros/: mobile_manipulator_mpc_node  mobile_manipulator_target
install/share/Embedded_Software_Firmware/: package.xml
install/share/Embedded_Software_Firmware/cmake/: Embedded_Software_FirmwareConfig.cmake
install/share/Embedded_Software_Firmware/firmware/A1/: ACU_V1_0_5.hex  version_log.md
install/share/Embedded_Software_Firmware/firmware/R1/: release_log.md
install/share/Embedded_Software_Firmware/tools/A1/: ota.out  ota.sh  ota_gui
install/share/Embedded_Software_Firmware/tools/R1/: r1_embedded_firmware_upgrade.sh
install/share/HDAS/: package.xml
install/share/HDAS/cmake/: HDASConfig.cmake
install/share/HDAS/launch/: hdas.launch  hdas_r1_t.launch  ota.launch  test.launch
install/share/mobiman/urdf/R1_PRO/: CMakeLists.txt  package.xml
install/share/mobiman/urdf/R1_PRO/launch/: display_r1_pro.launch  gazebo_r1_pro.launch
install/share/mobiman/urdf/R1_PRO/meshes/: left_realsense_link.STL  steer_motor_link2.STL  zed_link.STL
install/share/mobiman/urdf/R1_PRO/urdf/: R1_PRO_URDF_FLOATING_right.urdf  R1_PRO__URDF_20240904.csv  R1_PRO__URDF_20240904.urdf
install/share/startup_config/: package.xml
install/share/startup_config/cmake/: startup_configConfig.cmake
install/share/startup_config/script/: ota_script.sh
install/share/startup_config/script/boot/: sessions.sh  start.sh  start_hdas.sh  start_livox_lidar.sh  start_mobiman_r1_chassis.sh  start_mobiman_r1_joint.sh  start_perception.sh  start_realsense_camera.sh  start_roscore.sh  start_signal_camera.sh  start_zed_camera.sh  stop.sh
install/share/startup_config/script/boot/sessions.d/: R1.yaml  master.yaml
install/share/startup_config/script/prestart/: prestart_prepare.sh
(+568 files in other folders)
