<?xml version="1.0"?>
<package format="2">
    <name>Embedded_Software_Firmware</name>
    <version>0.0.1</version>
    <description>The Embedded_Software_Firmware package</description>

    <maintainer email="ros@todo.todo">ros</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
</package>
