<?xml version="1.0"?>
<package format="2">
    <name>HDAS</name>
    <version>0.0.1</version>
    <description>The HDAS_node package</description>

    <maintainer email="ros@todo.todo">ros</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>hdas_msg</depend>
    <depend>signal_arm_msg</depend>
    <depend>tf2</depend>
</package>
