<?xml version="1.0"?>
<package format="2">
    <name>startup_config</name>
    <version>0.0.1</version>
    <description>The startup_config package</description>

    <maintainer email="ros@todo.todo">ros</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
</package>
